force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <description>Company Assets</description>
    <label>R3 Asset</label>
    <nameField>
        <displayFormat>AST-{0000000}</displayFormat>
        <label>Asset No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>