force-app/main/default/objects/Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Location__c</columns>
    <columns>Value__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>