force-app/main/default/objects/Asset__c/listViews/All_On_Order.listView-meta.xml
<ListView>
    <fullName>All_On_Order</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Location__c</columns>
    <columns>Value__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ordered</value>
    </filters>
    <label>All On Order</label>
</ListView>